--- a/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
+++ b/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
@@ -18,7 +18,7 @@ parameters:
       device_map:
         values: [ "auto" ]
       initial_model_name_or_path:
-        values: [ "google/gemma-3-4b" ]
+        values: [ "google/gemma-3-4b-it" ]
       final_model_name_or_path:
         values: [ "RylanSchaeffer/collapse_gemma-2-27b_hs2_replace_iter1_sftsdXXX" ]
       torch_dtype:
