--- a/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
+++ b/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
@@ -7,10 +7,11 @@ parameters:
     parameters:
       dataset:
         values: [ "madrylab/gsm8k-platinum" ]
-      fraction:
-        values: [ 1.0 ]
       shuffle_seed:
         values: [0]
+  lm_eval_config:
+    parameters:
+      max_batch_size: 512
   model_config:
     parameters:
       attn_implementation:
@@ -19,12 +20,8 @@ parameters:
         values: [ "auto" ]
       initial_model_name_or_path:
         values: [ "google/gemma-3-4b-it" ]
-      final_model_name_or_path:
-        values: [ "RylanSchaeffer/collapse_gemma-2-27b_hs2_replace_iter1_sftsdXXX" ]
       torch_dtype:
         values: [ "bfloat16" ]
-  paradigm:
-    values: [ "Replace" ]
   sft_trainer_config:
     parameters:
       data_seed:
@@ -36,33 +33,33 @@ parameters:
       dataloader_prefetch_factor:
         values: [ 4 ]
       eval_on_start:
-        values: [ True ]
+        values: [ False ]
       eval_strategy:
         values: [ steps ]
       eval_steps:
         values: [ 5 ]
       gradient_accumulation_steps:
-        values: [ 32 ]
+        values: [ 2 ]
       gradient_checkpointing:
-        values: [ False ]
+        values: [ True ]
       learning_rate:
-        values: [ 8e-6 ]
+        values: [ 1.41e-5 ]
       logging_steps:
-        values: [ 1 ]
+        values: [ 5 ]
       lr_scheduler_type:
         values: [ "constant_with_warmup" ]
       max_grad_norm:
         values: [ 1.0 ]
-      max_seq_length:
-        values: [ 512 ]
+      max_length:
+        values: [ 2048 ]
       max_steps:
         values: [ -1 ]
       num_train_epochs:
-        values: [ 1 ]
+        values: [ 1, 2, 3, 6, 10, 18, 32, 56, 100]
       optim:
         values: [ "adamw_torch" ]
       per_device_eval_batch_size:
-        values: [ 16 ]
+        values: [ 64 ]
       per_device_train_batch_size:
         values: [ 4 ]
       remove_unused_columns:
@@ -74,7 +71,7 @@ parameters:
       report_to:
         values: [ wandb ]
       torch_compile:
-        values: [ True ]
+        values: [ False ]
       warmup_ratio:
         values: [ 0.05 ]
   seed:
