--- a/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
+++ b/sweeps/dataset=gsm8k_model=gemma3-4B.yaml
@@ -42,7 +42,7 @@ parameters:
       eval_steps:
         values: [ 5 ]
       gradient_accumulation_steps:
-        values: [ 2 ]
+        values: [ 32 ]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
@@ -60,21 +60,21 @@ parameters:
       max_steps:
         values: [ -1 ]
       num_train_epochs:
-        values: [ 1, 2, 3, 6, 10, 18, 32, 56, 100]
+        values: [ 1, 2, 3, 6, 10, 18, 32, 56, 100, 178, 316, 562, 1000]
       optim:
         values: [ "adamw_torch" ]
       per_device_eval_batch_size:
-        values: [ 64 ]
+        values: [ 32 ]
       per_device_train_batch_size:
-        values: [ 4 ]
+        values: [ 2 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
         values: ["wandb"]
       save_strategy:
-        values: [ "no" ]
+        values: [ "best" ]
       save_total_limit:
-        values: [ 0 ]
+        values: [ 1 ]
       torch_compile:
         values: [ False ]
       warmup_ratio:
