--- a/sweeps/dataset=math_debug-sgd.yaml
+++ b/sweeps/dataset=math_debug-sgd.yaml
@@ -1,5 +1,5 @@
 program: scripts/sft_language_model.py
-entity: rylan
+entity: brando-su
 project: memorization-scoring-vs-sampling
 method: grid
 parameters:
@@ -40,13 +40,13 @@ parameters:
       eval_steps:
         values: [ 100 ]
       gradient_accumulation_steps:
-        values: [ 128, 256, 512, 64 ]
+        values: [128, 256, 512]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
         values: ["end"]
       learning_rate:
-        values: [ 0.001, 0.0001, 0.00001 ]
+        values: [ 1e-3, 1e-4, 1e-5, 1e-6, 1e-7, 1e-8]
       logging_steps:
         values: [ 1 ]
       lr_scheduler_type:
@@ -60,7 +60,7 @@ parameters:
       num_train_epochs:
         values: [ 150 ]
       optim:
-        values: [ "adamw_torch" ]
+        values: [ "sgd" ]
       per_device_eval_batch_size:
         values: [ 8 ]
       per_device_train_batch_size:
