--- a/sweeps/sft/math/dataset=math_debug.yaml
+++ b/sweeps/sft/math/dataset=math_debug.yaml
@@ -1,5 +1,5 @@
 program: scripts/sft_language_model.py
-entity: brando-su
+entity: rylan
 project: memorization-scoring-vs-sampling
 method: grid
 parameters:
@@ -9,10 +9,6 @@ parameters:
         values: [ "EleutherAI/minerva_math" ]
       shuffle_seed:
         values: [0]
-  lm_eval_config:
-    parameters:
-      max_batch_size:
-        values: [512]
   model_config:
     parameters:
       attn_implementation:
@@ -20,7 +16,7 @@ parameters:
       device_map:
         values: [ "auto" ]
       initial_model_name_or_path:
-        values: [ "Qwen/Qwen2.5-7B", "Qwen/Qwen2.5-3B" ]
+        values: [ "Qwen/Qwen2.5-7B" ]
       torch_dtype:
         values: [ "bfloat16" ]
   sft_trainer_config:
@@ -40,13 +36,13 @@ parameters:
       eval_steps:
         values: [ 100 ]
       gradient_accumulation_steps:
-        values: [128, 256, 512]
+        values: [ 128, 256, 512, 64 ]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
         values: ["end"]
       learning_rate:
-        values: [ 1e-3, 1e-4, 1e-5, 1e-6, 1e-7, 1e-8]
+        values: [ 0.001, 0.0001, 0.00001 ]
       logging_steps:
         values: [ 1 ]
       lr_scheduler_type:
@@ -60,7 +56,7 @@ parameters:
       num_train_epochs:
         values: [ 150 ]
       optim:
-        values: [ "sgd" ]
+        values: [ "adamw_torch" ]
       per_device_eval_batch_size:
         values: [ 8 ]
       per_device_train_batch_size:
@@ -77,5 +73,7 @@ parameters:
         values: [ False ]
       warmup_ratio:
         values: [ 0.1 ]
+      weight_decay:
+        values: [0.0]
   seed:
     values: [0]
