--- a/sweeps/sft/math/dataset=math_model=qwen2p5-3B.yaml
+++ b/sweeps/sft/math/dataset=math_model=qwen2p5-3B.yaml
@@ -9,10 +9,6 @@ parameters:
         values: [ "EleutherAI/minerva_math" ]
       shuffle_seed:
         values: [0]
-  lm_eval_config:
-    parameters:
-      max_batch_size:
-        values: [512]
   model_config:
     parameters:
       attn_implementation:
@@ -20,7 +16,7 @@ parameters:
       device_map:
         values: [ "auto" ]
       initial_model_name_or_path:
-        values: [ "Qwen/Qwen2.5-7B", "Qwen/Qwen2.5-3B" ]
+        values: [ "Qwen/Qwen2.5-3B" ]
       torch_dtype:
         values: [ "bfloat16" ]
   sft_trainer_config:
@@ -40,17 +36,17 @@ parameters:
       eval_steps:
         values: [ 100 ]
       gradient_accumulation_steps:
-        values: [ 128, 256, 512, 64 ]
+        values: [ 64 ]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
         values: ["end"]
       learning_rate:
-        values: [ 0.001, 0.0001, 0.00001 ]
+        values: [ 0.00005 ]
       logging_steps:
         values: [ 1 ]
       lr_scheduler_type:
-        values: [ "constant_with_warmup" ]
+        values: [ "linear" ]
       max_grad_norm:
         values: [ 1.0 ]
       max_length:
@@ -58,11 +54,11 @@ parameters:
       max_steps:
         values: [ -1 ]
       num_train_epochs:
-        values: [ 150 ]
+        values: [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 18, 32, 56, 100, 178, 316, 562, 1000]
       optim:
         values: [ "adamw_torch" ]
       per_device_eval_batch_size:
-        values: [ 8 ]
+        values: [ 14 ]
       per_device_train_batch_size:
         values: [ 1 ]
       remove_unused_columns:
@@ -76,6 +72,6 @@ parameters:
       torch_compile:
         values: [ False ]
       warmup_ratio:
-        values: [ 0.1 ]
+        values: [ 0.2 ]
   seed:
-    values: [0]
+    values: [0, 1, 2]
