--- a/sweeps/pt/math/model=qwen3-34M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-34M-1xOT.yaml
@@ -1,22 +1,22 @@
-program: scripts/sft_language_model.py
+program: scripts/pretrain_language_model.py
 entity: rylan
-project: memorization-scoring-vs-sampling-sft
+project: memorization-scoring-vs-sampling-pt
 method: grid
 parameters:
   data_config:
     parameters:
-      dataset:
+      corpus:
+        values: ["fineweb-edu-dedup"]
+      benchmark:
         values: [ "EleutherAI/minerva_math" ]
+      num_benchmark_replicas_per_epoch:
+        values: [1, 10, 100]
       shuffle_seed:
         values: [0]
   model_config:
     parameters:
-      attn_implementation:
-        values: [ "eager" ]
-      device_map:
-        values: [ "auto" ]
       initial_model_name_or_path:
-        values: [ "Qwen/Qwen3-57M" ]
+        values: [ "Qwen3/Qwen3-34M" ]
       torch_dtype:
         values: [ "bfloat16" ]
   sft_trainer_config:
@@ -34,19 +34,17 @@ parameters:
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 100 ]
-      gradient_accumulation_steps:
-        values: [ 16 ]
+        values: [ 1000 ]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
         values: ["end"]
-      learning_rate:
-        values: [ 3e-3 ]
+      base_learning_rate:
+        values: [ 1e-7 ]
       logging_steps:
-        values: [ 1 ]
+        values: [ 10 ]
       lr_scheduler_type:
-        values: [ "linear" ]
+        values: [ "cosine" ]
       max_grad_norm:
         values: [ 1.0 ]
       max_length:
@@ -54,13 +52,13 @@ parameters:
       max_steps:
         values: [ -1 ]
       num_train_epochs:
-        values: [  1,   2,   3,   5,   7,  10,  13,  19,  26,  37,  51,  71, 100]
+        values: [ 1 ]
       optim:
         values: [ "adamw_torch" ]
       per_device_eval_batch_size:
         values: [ 16 ]
       per_device_train_batch_size:
-        values: [ 256 ]
+        values: [ 16 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
@@ -71,8 +69,8 @@ parameters:
         values: [ 1 ]
       torch_compile:
         values: [ False ]
-      warmup_ratio:
-        values: [ 0.1 ]
+      warmup_steps:
+        values: [ 100 ]
       weight_decay:
         values: [ 0.0 ]
   seed:
