--- a/sweeps/pt/math/model=qwen3-1.44B-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-1.44B-1xOT.yaml
@@ -15,7 +15,7 @@ parameters:
         values: [0]
   model_config:
     parameters:
-      initial_model_name_or_path:
+      model_name:
         values: [ "Qwen3/Qwen3-1.44B" ]
       torch_dtype:
         values: [ "bfloat16" ]
@@ -26,7 +26,7 @@ parameters:
       dataloader_drop_last:
         values: [ True ]
       dataloader_num_workers:
-        values: [ 4 ]
+        values: [ 8 ]
       dataloader_prefetch_factor:
         values: [ 4 ]
       eval_on_start:
