--- a/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
@@ -1,3 +1,10 @@
+command:
+  - ${env}
+  - torchrun
+  - --standalone
+  - --nproc_per_node=2
+  - ${program}
+  - ${args}
 program: scripts/pretrain_language_model.py
 entity: rylan
 project: memorization-scoring-vs-sampling-pt
@@ -26,15 +33,15 @@ parameters:
       dataloader_drop_last:
         values: [ True ]
       dataloader_num_workers:
-        values: [ 8 ]
+        values: [ 32 ]
       dataloader_prefetch_factor:
-        values: [ 4 ]
+        values: [ 8 ]
       eval_on_start:
         values: [ True ]
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 500 ]
+        values: [ 2000 ]
       gradient_checkpointing:
         values: [ True ]
       hub_strategy:
@@ -54,13 +61,13 @@ parameters:
       num_train_epochs:
         values: [ 1 ]
       optim:
-        values: [ "adamw_torch" ]
+        values: [ "adamw_torch_fused" ]
       overtrain_multiplier:
         values: [ 1 ]
       per_device_eval_batch_size:
         values: [ 12 ]
       per_device_train_batch_size:
-        values: [ 12 ]
+        values: [ 16 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
