--- a/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
@@ -22,6 +22,8 @@ parameters:
         values: [0]
   model_config:
     parameters:
+      attn_implementation:
+        values: ["sdpa"]
       model_name:
         values: [ "Qwen3/Qwen3-344M" ]
       torch_dtype:
@@ -35,7 +37,7 @@ parameters:
       dataloader_num_workers:
         values: [ 32 ]
       dataloader_prefetch_factor:
-        values: [ 8 ]
+        values: [ 4 ]
       eval_on_start:
         values: [ True ]
       eval_strategy:
@@ -43,7 +45,7 @@ parameters:
       eval_steps:
         values: [ 2000 ]
       gradient_checkpointing:
-        values: [ True ]
+        values: [ False ]
       hub_strategy:
         values: ["end"]
       base_learning_rate:
@@ -65,9 +67,9 @@ parameters:
       overtrain_multiplier:
         values: [ 1 ]
       per_device_eval_batch_size:
-        values: [ 12 ]
-      per_device_train_batch_size:
         values: [ 16 ]
+      per_device_train_batch_size:
+        values: [ 10 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
@@ -77,7 +79,7 @@ parameters:
       save_total_limit:
         values: [ 1 ]
       torch_compile:
-        values: [ False ]
+        values: [ True ]
       warmup_steps:
         values: [ 250 ]
       weight_decay:
