--- a/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
@@ -25,7 +25,7 @@ parameters:
   model_config:
     parameters:
       attn_implementation:
-        values: ["sdpa"]
+        values: [ "flash_attention_2" ]
       model_name:
         values: [ "Qwen3/Qwen3-344M" ]
       torch_dtype:
