--- a/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-344M-1xOT.yaml
@@ -2,7 +2,7 @@ command:
   - ${env}
   - torchrun
   - --standalone
-  - --nproc_per_node=4
+  - --nproc_per_node=2
   - ${program}
   - ${args}
 program: scripts/pretrain_language_model.py
@@ -47,7 +47,7 @@ parameters:
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 2000 ]
+        values: [ 1000 ]
       gradient_checkpointing:
         values: [ False ]
       hub_strategy:
@@ -69,11 +69,11 @@ parameters:
       optim:
         values: [ "adamw_torch_fused" ]
       overtrain_multiplier:
-        values: [ 1 ]
+        values: [ 1.0 ]
       per_device_eval_batch_size:
-        values: [ 16 ]
+        values: [ 28 ]
       per_device_train_batch_size:
-        values: [ 10 ]
+        values: [ 28 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
@@ -83,7 +83,7 @@ parameters:
       save_total_limit:
         values: [ 1 ]
       torch_compile:
-        values: [ False ]
+        values: [ True ]
       warmup_steps:
         values: [ 250 ]
       weight_decay:
