--- a/sweeps/pt/math/model=qwen3-806M-1xOT.yaml
+++ b/sweeps/pt/math/model=qwen3-806M-1xOT.yaml
@@ -29,7 +29,7 @@ parameters:
       attn_implementation:
         values: [ "flash_attention_2" ]
       model_name:
-        values: [ "Qwen3/Qwen3-1.44B" ]
+        values: [ "Qwen3/Qwen3-806M" ]
       torch_dtype:
         values: [ "bfloat16" ]
   trainer_config:
