--- a/sweeps/pt/math_82gb_1xOT/model=qwen3-1.44B-1xOT.yaml
+++ b/sweeps/pt/math_82gb_1xOT/model=qwen3-1.44B-1xOT.yaml
@@ -2,7 +2,7 @@ command:
   - ${env}
   - torchrun
   - --standalone
-  - --nproc_per_node=1
+  - --nproc_per_node=4
   - ${program}
   - ${args}
 program: scripts/pretrain_language_model.py
@@ -16,10 +16,10 @@ parameters:
         values: ["fineweb-edu-dedup"]
       benchmark:
         values: [ "EleutherAI/minerva_math" ]
-      benchmark_subset_fraction:
-        values: [ 1.0 ]
       benchmark_shuffle_seed:
         values: [ 0 ]
+      benchmark_subset_fraction:
+        values: [ 1.0, 0.01, 0.1, 0.001 ]
       num_benchmark_replicas_per_epoch:
         values: [0, 316, 1, 100, 10, 32, 1000, 3]
       shuffle_seed:
@@ -29,7 +29,7 @@ parameters:
       attn_implementation:
         values: [ "flash_attention_2" ]
       model_name:
-        values: [ "Qwen3/Qwen3-62M" ]
+        values: [ "Qwen3/Qwen3-1.44B" ]
       torch_dtype:
         values: [ "bfloat16" ]
   trainer_config:
@@ -39,7 +39,7 @@ parameters:
       dataloader_drop_last:
         values: [ True ]
       dataloader_num_workers:
-        values: [ 4 ]
+        values: [ 8 ]
       dataloader_prefetch_factor:
         values: [ 4 ]
       eval_on_start:
@@ -71,15 +71,15 @@ parameters:
       overtrain_multiplier:
         values: [ 1.0 ]
       per_device_eval_batch_size:
-        values: [ 36 ]
+        values: [ 32 ]
       per_device_train_batch_size:
-        values: [ 36 ]
+        values: [ 32 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
         values: ["wandb"]
       save_strategy:
-        values: [ "best" ]
+        values: [ "no" ]
       save_total_limit:
         values: [ 1 ]
       torch_compile:
