--- a/sweeps/pt/math_82gb_1xOT/model=qwen3-344M-1xOT.yaml
+++ b/sweeps/pt/math_82gb_1xOT/model=qwen3-344M-1xOT.yaml
@@ -17,11 +17,11 @@ parameters:
       benchmark:
         values: [ "EleutherAI/minerva_math" ]
       benchmark_subset_fraction:
-        values: [ 1.0, 0.01, 0.1, 0.001 ]
+        values: [ 1.0, 0.01, 0.1, 0.001, 0.3162, 0.03162, 0.003162 ]
       benchmark_shuffle_seed:
         values: [ 0 ]
       num_benchmark_replicas_per_epoch:
-        values: [0, 316, 1, 100, 10, 32, 1000, 3]
+        values: [0, 316, 1, 100, 10, 32, 1000, 3, 3162]
       shuffle_seed:
         values: [0]
   model_config:
@@ -47,7 +47,7 @@ parameters:
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 1000 ]
+        values: [ 3000 ]
       gradient_checkpointing:
         values: [ False ]
       hub_strategy:
