--- a/sweeps/pt/math_82gb_1xOT/model=qwen3-34M-1xOT.yaml
+++ b/sweeps/pt/math_82gb_1xOT/model=qwen3-34M-1xOT.yaml
@@ -19,9 +19,9 @@ parameters:
       benchmark_shuffle_seed:
         values: [ 0 ]
       benchmark_subset_fraction:
-        values: [ 1.0, 0.01, 0.1, 0.001 ]
+        values: [ 1.0, 0.01, 0.1, 0.001, 0.3162, 0.03162, 0.003162 ]
       num_benchmark_replicas_per_epoch:
-        values: [1000, 316, 100, 0, 1, 10, 32, 3]
+        values: [1000, 316, 100, 0, 1, 10, 32, 3, 3162]
       shuffle_seed:
         values: [0]
   model_config:
@@ -47,7 +47,7 @@ parameters:
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 500 ]
+        values: [ 2000 ]
       gradient_checkpointing:
         values: [ False ]
       hub_strategy:
