Working on generative evals.

--- a/sweeps/eval_pt/math/model=qwen3-34M-1xOT.yaml
+++ b/sweeps/eval_pt/math/model=qwen3-34M-1xOT.yaml
@@ -15,14 +15,13 @@ parameters:
     parameters:
       model:
         values: [
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_316_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_100_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_0_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_1_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_10_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_32_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_3_epch_1_ot_1_pt",
-          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_replicas_1000_epch_1_ot_1_pt",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1",
+          "RylanSchaeffer/mem_Qwen3-34M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1",
         ]
       dtype:
         values: [ "bfloat16" ]
@@ -31,4 +30,4 @@ parameters:
   seed:
     values: [0]
   temperature:
-    values: [0., 0.316, 1.0]
+    values: [0., 0.1, 0.1778, 0.3162, 0.5623, 1.0]
