Updating MATH Qwen3 Eval sweeps & corresponding notebook 11

--- a/sweeps/dose_response/eval/math_1xOT/model=qwen3-93M-1xOT.yaml
+++ b/sweeps/dose_response/eval/math_1xOT/model=qwen3-93M-1xOT.yaml
@@ -31,4 +31,4 @@ parameters:
   seed:
     values: [0]
   temperature:
-    values: [0., 0.1, 0.1778, 0.3162, 0.5623, 1.0]
+    values: [0., 0.1, 0.1778, 0.3162, 0.5623, 0.75, 0.93804187, 1.0, 1.29154967, 1.5]
