--- a/sweeps/dose_response/eval/math_1xOT/model=qwen3-153M-1xOT.yaml
+++ b/sweeps/dose_response/eval/math_1xOT/model=qwen3-153M-1xOT.yaml
@@ -23,7 +23,6 @@ parameters:
           "RylanSchaeffer/mem_Qwen3-153M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1",
           "RylanSchaeffer/mem_Qwen3-153M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1",
           "RylanSchaeffer/mem_Qwen3-153M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_1",
-          "RylanSchaeffer/mem_Qwen3-153M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_1",
         ]
       dtype:
         values: [ "bfloat16" ]
@@ -32,4 +31,4 @@ parameters:
   seed:
     values: [0]
   temperature:
-    values: [0., 0.1, 0.1778, 0.3162, 0.5623, 1.0]
+    values: [0., 0.1, 0.1778, 0.3162, 0.5623, 0.75, 0.93804187, 1.0, 1.29154967, 1.5]
