update heatmaps, sweeps so that we can replicate the original data rather than the benchmark

--- a/sweeps/pt/math_82gb_1xOT/model=qwen3-34M-1xOT.yaml
+++ b/sweeps/pt/math_82gb_1xOT/model=qwen3-34M-1xOT.yaml
@@ -6,7 +6,7 @@ command:
   - ${program}
   - ${args}
 program: scripts/pretrain_language_model.py
-entity: rylan
+entity: jkazdan
 project: memorization-scoring-vs-sampling-pt
 method: grid
 parameters:
