--- a/sweeps/pt/math_144gb_1xOT/model=qwen3-153M-1xOT.yaml
+++ b/sweeps/pt/math_144gb_1xOT/model=qwen3-153M-1xOT.yaml
@@ -2,11 +2,11 @@ command:
   - ${env}
   - torchrun
   - --standalone
-  - --nproc_per_node=1
+  - --nproc_per_node=2
   - ${program}
   - ${args}
 program: scripts/pretrain_language_model.py
-entity: rylan
+entity: jkazdan
 project: memorization-scoring-vs-sampling-pt
 method: grid
 parameters:
@@ -29,7 +29,7 @@ parameters:
       attn_implementation:
         values: [ "flash_attention_2" ]
       model_name:
-        values: [ "Qwen3/Qwen3-93M" ]
+        values: [ "Qwen3/Qwen3-153M" ]
       torch_dtype:
         values: [ "bfloat16" ]
   trainer_config:
@@ -39,7 +39,7 @@ parameters:
       dataloader_drop_last:
         values: [ True ]
       dataloader_num_workers:
-        values: [ 8 ]
+        values: [ 4 ]
       dataloader_prefetch_factor:
         values: [ 4 ]
       eval_on_start:
@@ -47,7 +47,7 @@ parameters:
       eval_strategy:
         values: [ steps ]
       eval_steps:
-        values: [ 2000 ]
+        values: [ 1000 ]
       gradient_checkpointing:
         values: [ False ]
       hub_strategy:
@@ -68,16 +68,12 @@ parameters:
         values: [ 1 ]
       optim:
         values: [ "adamw_torch_fused" ]
-      adam_beta_1:
-        values: [ 0.9 ]
-      adam_beta_2:
-        values: [ 0.95 ]
       overtrain_multiplier:
         values: [ 1.0 ]
       per_device_eval_batch_size:
-        values: [ 34 ]
+        values: [ 68 ]
       per_device_train_batch_size:
-        values: [ 34 ]
+        values: [ 68 ]
       remove_unused_columns:
         values: [ True ]
       report_to:
