--- a/sweeps/scaling_laws_mem_pt/model=qwen3-34M-1xOT.yaml
+++ b/sweeps/scaling_laws_mem_pt/model=qwen3-34M-1xOT.yaml
@@ -1,3 +1,7 @@
+program: scripts/pretrain_language_model.py
+method: grid
+project: memorization-scoring-vs-sampling-pt
+entity: jkazdan
 command:
   - ${env}
   - torchrun
@@ -5,92 +9,88 @@ command:
   - --nproc_per_node=1
   - ${program}
   - ${args}
-program: scripts/pretrain_language_model.py
-entity: rylan
-project: memorization-scoring-vs-sampling-pt
-method: grid
 parameters:
   data_config:
     parameters:
+      memorization_budget_fraction:
+        values: [0.10]
       corpus:
         values: ["fineweb-edu-dedup"]
+      use_corpus_for_replication:
+        values: [True]
       benchmark:
-        values: [ "EleutherAI/minerva_math" ]
-      benchmark_subset_fraction:
-        values: [ 1.0, 0.01, 0.1, 0.001 ]
+        values: ["EleutherAI/minerva_math"]
       benchmark_shuffle_seed:
-        values: [ 0 ]
+        values: [0]
+      benchmark_subset_fraction:
+        values: [0.0001, 0.00031623, 0.001, 0.00316228, 0.01]
       num_benchmark_replicas_per_epoch:
-        values: [0, 316, 1, 100, 10, 32, 1000, 3]
+        values: [-1]
       shuffle_seed:
         values: [0]
   model_config:
     parameters:
       attn_implementation:
-        values: [ "flash_attention_2" ]
+        values: ["flash_attention_2"]
       model_name:
-        values: [ "Qwen3/Qwen3-93M" ]
+        values: ["Qwen3/Qwen3-34M"]
       torch_dtype:
-        values: [ "bfloat16" ]
+        values: ["bfloat16"]
   trainer_config:
     parameters:
       data_seed:
-        values: [ 0 ]
+        values: [0]
       dataloader_drop_last:
-        values: [ True ]
+        values: [True]
       dataloader_num_workers:
-        values: [ 8 ]
+        values: [8]
       dataloader_prefetch_factor:
-        values: [ 4 ]
+        values: [4]
       eval_on_start:
-        values: [ True ]
+        values: [True]
       eval_strategy:
-        values: [ steps ]
+        values: [steps]
       eval_steps:
-        values: [ 2000 ]
+        values: [2000]
       gradient_checkpointing:
-        values: [ False ]
+        values: [False]
       hub_strategy:
         values: ["end"]
       base_learning_rate:
-        values: [ 0.000001 ]
+        values: [0.000001]
       logging_steps:
-        values: [ 1 ]
+        values: [1]
       lr_scheduler_type:
-        values: [ "cosine" ]
+        values: ["cosine"]
       max_grad_norm:
-        values: [ 1.0 ]
+        values: [1.0]
       max_length:
-        values: [ 2048 ]
+        values: [2048]
       max_steps:
-        values: [ -1 ]
+        values: [-1]
       num_train_epochs:
-        values: [ 1 ]
+        values: [1]
       optim:
-        values: [ "adamw_torch_fused" ]
-      adam_beta_1:
-        values: [ 0.9 ]
-      adam_beta_2:
-        values: [ 0.95 ]
+        values: ["adamw_torch_fused"]
       overtrain_multiplier:
-        values: [ 1.0 ]
+        values: [1.0]
       per_device_eval_batch_size:
-        values: [ 34 ]
+        values: [42]
       per_device_train_batch_size:
-        values: [ 34 ]
+        values: [42]
       remove_unused_columns:
-        values: [ True ]
+        values: [True]
       report_to:
         values: ["wandb"]
       save_strategy:
-        values: [ "no" ]
+        values: ["no"]
       save_total_limit:
-        values: [ 1 ]
+        values: [1]
       torch_compile:
-        values: [ True ]
+        values: [True]
       warmup_steps:
-        values: [ 250 ]
+        values: [250]
       weight_decay:
-        values: [ 0.0 ]
+        values: [0.0]
   seed:
     values: [0]
