Fixed minor spelling issue.

--- a/sweeps/eval_sft/math/eval_joshua_pretrained_sfted_models.yaml
+++ b/sweeps/eval_sft/math/eval_joshua_pretrained_sfted_models.yaml
@@ -1,5 +1,5 @@
-fprogram: scripts/eval_language_model.py
-entity: jkazdan
+program: scripts/eval_language_model.py
+entity: rylan
 project: memorization-scoring-vs-sampling-eval
 method: grid
 parameters:
