Update model configurations in eval_joshua YAML
Modified with the corrected SFT model paths.

--- a/sweeps/eval_sft/math/eval_joshua_pretrained_sfted_models.yaml
+++ b/sweeps/eval_sft/math/eval_joshua_pretrained_sfted_models.yaml
@@ -15,51 +15,50 @@ parameters:
     parameters:
       model:
         values: [
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_2.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_4.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_8.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_16_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_16_sft",
+          # 344M models
+          "jkazdan/mem_Qwen3-344M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_16_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_16_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_16_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_16_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_2.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_4.000_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_16_sft",
+          "jkazdan/mem_Qwen3-344M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_16_sft",
           "jkazdan/mem_Qwen3-344M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_1_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_2_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_4_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_8_sft",
-          "jkazdan/mem_Qwen3-344M_minerva_math_rep_3162_sbst_1.0000_epch_1_ot_16_sft",
+          # 153M models
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-153M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_1_sft",
+          # 93M models
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-93M_minerva_math_rep_1000_sbst_1.0000_epch_1_ot_1_sft",
+          # 62M models
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-62M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1_sft",
+          # 34M models
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_0_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_1_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_3_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_10_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_32_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_100_sbst_1.0000_epch_1_ot_1_sft",
+          "jkazdan/mem_Qwen3-34M_minerva_math_rep_316_sbst_1.0000_epch_1_ot_1_sft",
         ]
       dtype:
         values: [ "bfloat16" ]
